fixed problem with z-index

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@
   flex: 0 0 33.333%;
   position: relative;
   min-height: 250px;
+  z-index: -1;
 }
 .content__image img {
   width: 100%;
@@ -161,7 +162,7 @@
     margin-top: 0px;
     padding: 70px 10px 20px 0px;
     transition: all 0.3s ease 0s;
-    z-index: 10;
+    z-index: 5;
   }
   .header__menu.active{
     top: 0;
